src/test/deca/context/invalid/without_class/variable_without_name.deca
// Description:
//    Variable declared without type
//
// Result:
//    UNDEFINED_VAR: Variable \(.\)\+ is undefined
//    line 10


{
    int = 2;
}